--- a/style.css
+++ b/style.css
@@ -325,10 +325,12 @@ ul li::before {
 }
 
 .category {
+  width: 1000px; /* Remplacez 200px par la largeur souhaitée */
   margin-top: 50px;
   padding: 20px;
   background-color: #f4f4f4; /* Couleur de fond légère pour différencier les catégories */
   border-radius: 8px;
+  
 }
 
 .category h2 {
@@ -356,4 +358,32 @@ ul li::before {
   margin-top: 5px;
   margin-bottom: 10px;
   font-size: 15px;
+  
+}.progress-container {
+  margin-top: 20px;
+}
+
+.progress-bar {
+  display: flex;
+  width: 100%;
+  height: 20px;
+  background-color: #f3f3f3;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.progress-bar .segment {
+  flex: 1;
+  height: 100%;
+  border-right: 2px solid white; /* Pour séparer les segments */
+}
+
+.progress-bar .segment.completed {
+  background-color: var(--kaki-green); /* Couleur pour les dons effectués */
+}
+
+.progress-bar .segment.pending {
+  background-color: #ccc; /* Couleur grisée pour les étapes restantes */
+  background-image: linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 50%, #ccc 50%, #ccc 75%, transparent 75%, transparent);
+  background-size: 10px 10px; /* Crée un effet hachuré */
 }
